Updated ReadMe file and Weather Forecast layout and markup;

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <body>
   <app-nav-menu></app-nav-menu>
-  <div class="container">
+  <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
   <svg id="clouds" alt="Gray Clouds Background" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677"
